--- a/goumai.html
+++ b/goumai.html
@@ -80,7 +80,7 @@
             <li class="list-group-item border">
                 <div class="row">
                     <div class="col-xs-5 ">安装地址</div>
-                    <div class="col-xs-7"><textarea style="padding-right: 8%" placeholder="请填写详细地址"></textarea></div>
+                    <div class="col-xs-7"><textarea style="padding-right: 8%;background-color:#F4F4F4;width:120%;position:relative;left:-20%;" placeholder="请填写详细地址"></textarea></div>
                 </div>
             </li>
         </ul>
