--- a/huishou.html
+++ b/huishou.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/CSS.css" />
     <title></title>
     <style>
+   		 body{
+		background-color: gainsboro;
+			}    
         ul li{
             height: 45px;
             line-height: 45px;
