--- a/zhongxin.html
+++ b/zhongxin.html
@@ -11,6 +11,13 @@
     		width:25px;
     		height: 25px;
     	}
+    	body{
+    		background-color:#F4F4F4;
+    	}
+    	.col-xs-3 span{
+    		position:relative;
+    		right:-60px;
+    	}
     </style>
     <title></title>
 </head>
@@ -81,54 +88,54 @@
             <div class="row">
                 <div class="col-xs-2 "><img src="img/iconOrder.png" class="img-response"></div>
                 <div class="col-xs-7 ">我的订单</div>
-                <a href="order.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-chevron-right"></span></div></a>
+                <a href="order.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-menu-right black"></span></div></a>
             </div>
         </li>
         <li class="list-group-item border">
             <div class="row">
                 <div class="col-xs-2 "><img src="img/iconEquipment.png" class="img-response"></div>
                 <div class="col-xs-7 ">设备绑定</div>
-                <a href="bangding.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-chevron-right"></span></div></a>
+                <a href="bangding.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-menu-right "></span></div></a>
             </div>
         </li>
         <li class="list-group-item border">
             <div class="row">
                 <div class="col-xs-2 "><img src="img/iconBack.png" class="img-response"></div>
                 <div class="col-xs-7 ">返款记录</div>
-                <a href="fanhuan.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-chevron-right"></span></div></a>
+                <a href="fanhuan.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-menu-right"></span></div></a>
             </div>
         </li>
         <li id="tixian"class="list-group-item border qiehuan">
             <div class="row">
                 <div class="col-xs-2 "><img src="img/iconWallet.png" class="img-response"></div>
                 <div class="col-xs-7 ">提现</div>
-                <a href="tixian.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-chevron-right"></span></div></a>
+                <a href="tixian.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-menu-right"></span></div></a>
             </div>
         </li>
         <li id="chongzhi"class="list-group-item border">
             <div class="row">
                 <div class="col-xs-2 "><img src="img/iconPay.png" class="img-response"></div>
                 <div class="col-xs-7 ">充值中心</div>
-                <a href="chongzhi.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-chevron-right"></span></div></a>
+                <a href="chongzhi.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-menu-right"></span></div></a>
             </div>
         </li>
         <li class="list-group-item border">
             <div class="row">
                 <div class="col-xs-2 "><img src="img/iconRepeat.png" class="img-response"></div>
                 <div class="col-xs-7 ">回收记录</div>
-                <a href="huishou.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-chevron-right"></span></div></a>
+                <a href="huishou.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-menu-right "></span></div></a>
             </div>
         </li>
         <li class="list-group-item border">
             <div class="row">
                 <div class="col-xs-2 "><img src="img/iconRank.png"></div>
                 <div class="col-xs-7 ">垃圾回收排行榜</div>
-                <a href="laji.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-chevron-right"></span></div></a>
+                <a href="laji.html"><div class="col-xs-3 text-align"><span class="glyphicon glyphicon-menu-right"></span></div></a>
             </div>
         </li>
     </ul>
-    <div id="qiehuan"style="width: 100%;text-align: center;height: 45px;line-height: 45px;background-color: white;cursor: pointer;">
-    	<span style="color: #00CC00;">我要购买</span>
+    <div id="qiehuan"style="width: 100%;text-align: center;height: 45px;line-height: 45px;background-color: white;cursor: pointer;border-bottom:1px solid #E6E6E6;border-top:1px solid #E6E6E6;">
+    	<span  style="color: #31B153;font-weight:900;font-size:18px;">我要购买</span>
     </div>
 </div>
 <script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
