--- a/chongzhi.html
+++ b/chongzhi.html
@@ -6,6 +6,9 @@
     <link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <title></title>
     <style>
+    body{
+    	background-color:#F4F4F4;
+    }
     .back{
         	background-color: #0d0d0d;
         	color: white;
@@ -54,11 +57,11 @@
             </ul>
         </div>
     </nav>
-    <div style="margin-top: 70px;background-color:#ffffff">
+    <div style="margin-top: 70px;>
         <div style="height: 65px;line-height: 65px">
             <input  style="height: 45px" type="text" class="form-control" placeholder="请输入充值金额">
         </div>
-        <div style="height: 65px;padding-bottom: 20px;color: #f2f2f2;"><button type="button" class="btn" data-toggle="button" style="width: 100%;height: 45px;background-color: #00cc00">
+        <div style="height: 65px;margin-top: 20px;color: #f2f2f2;"><button type="button" class="btn" data-toggle="button" style="width: 100%;height: 45px;background-color: #00cc00">
             <h4>立即充值</h4>
         </button></div>
     </div>
