--- a/tixian.html
+++ b/tixian.html
@@ -11,7 +11,12 @@
             height: 45px;
             line-height: 45px;
             
-        }       
+        }
+        .row_span span{
+        	position:relative;
+        	top:-10px;
+        	margin-top:-10px;
+        }      
     </style>
 </head>
 <body>
@@ -57,34 +62,34 @@
     </nav>
     <div style="margin-top: 50px;background-color:#ffffff">
         <form class="form">
-            <input style="height: 45px" type="text" class="form-control" placeholder="请输入提现金额">
-        	<button type="submit" class="btn button" data-toggle="button" >
+            <input style="width:90%;height: 45px;position:relative;top:20px;margin-left:5%;background-color:#EDEDED;" type="text" class="form-control" placeholder="请输入提现金额" >
+        	<button type="submit" class="btn button" data-toggle="button"style="width:90%;height:45px;margin-left:5%;margin-top:50px;" >
                 <h4>申请提现</h4>
             </button>
             <div style="height: 20px;"></div>
         </form>     
     </div>
-    <div class="back1"><span>&nbsp;&nbsp;提现记录</span></div>
+    <div class="back1" style="height:45px;"><span style="line-height:45px;">&nbsp;&nbsp;提现记录</span></div>
     <ul class="list-group">
         <li class="list-group-item">
-            <div class="row">
-                <div style="text-align: left" class="col-xs-4 col-sm-4 ">2013-03-01</div>
+            <div class="row row_span">
+                <div style="text-align: left" class="col-xs-4 col-sm-4 "><span>2013-03-01</span></div>
                 <div class="col-xs-4 col-sm-4"></div>
-                <div style="text-align: right" class="col-xs-4 col-sm-4 ">-100</div>
+                <div style="text-align: right;color:#EB3D4B;" class="col-xs-4 col-sm-4 "><span>-100</span></div>
             </div>
         </li>
         <li class="list-group-item">
-            <div class="row">
-                <div style="text-align: left" class="col-xs-4 col-sm-4 ">2013-03-01</div>
+            <div class="row row_span"  >
+                <div style="text-align: left;" class="col-xs-4 col-sm-4 "><span>2013-03-01</span></div>
                 <div class="col-xs-4 col-sm-4"></div>
-                <div style="text-align: right" class="col-xs-4 col-sm-4 ">-100</div>
+                <div style="text-align: right;color:#EB3D4B;" class="col-xs-4 col-sm-4 "><span>-100</span></div>
             </div>
         </li>
         <li class="list-group-item">
-            <div class="row">
-                <div style="text-align: left" class="col-xs-4 col-sm-4 ">2013-03-01</div>
+            <div class="row row_span" >
+                <div style="text-align: left" class="col-xs-4 col-sm-4 "><span>2013-03-01</span></div>
                 <div class="col-xs-4 col-sm-4"></div>
-                <div style="text-align: right" class="col-xs-4 col-sm-4 ">-100</div>
+                <div style="text-align: right;color:#EB3D4B;" class="col-xs-4 col-sm-4 "><span>-100</span></div>
             </div>
         </li>
     </ul>
